# hex

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.adoc  config.h.in  hex.adoc  hex.c  hex.desktop  tui.c
plugins/: bencode.lua  elf.lua  gzip.lua  none.lua  pcap.lua  pdf.lua  vdi.lua  xcursor.lua  zip.lua  zlib.lua
